dom/media/MediaPrefs.h
@@ -191,15 +191,12 @@ private:
   // Hls
   DECL_MEDIA_PREF("media.hls.enabled",                        HLSEnabled, bool, false);
 
-#if !defined(RELEASE_OR_BETA)
+  // Both rust/stagefright will be enabled when this is true regardless of 'media.rust.mp4parser'.
   DECL_MEDIA_PREF("media.rust.test_mode",                     RustTestMode, bool, false);
-#endif
 
-#if defined(MOZ_WIDGET_GTK)
+  // True, it enables rust parser and fallback to stagefright if rust parser fails.
+  // False, it uses stagefright only.
   DECL_MEDIA_PREF("media.rust.mp4parser",                     EnableRustMP4Parser, bool, true);
-#else
-  DECL_MEDIA_PREF("media.rust.mp4parser",                     EnableRustMP4Parser, bool, false);
-#endif
 
   DECL_MEDIA_PREF("media.mp4.enabled",                        MP4Enabled, bool, false);
 
